# pLM-BLAST

./: .gitignore  LICENSE.md  README.md  checkdb.py  datafull.short.p  embeddings.py  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  res.txt  set_by_step.ipynb  stest.sh  sum_emb.py  test.sh  test_database.py  test_selfsim.ipynb
.github/workflows/: flow.yml  workflow.yaml
alntools/: __init__.py  alignment.py  base.py  data.py  embeddings.py  filehandle.py  numeric.py  parser.py  settings.py
alntools/__pycache__/: numeric.fill_matrix-30.py39.1.nbc  numeric.fill_matrix-30.py39.nbi  numeric.fill_matrix-40.py39.1.nbc  (+99 more)
dev/: debug.ipynb  stepbystep.ipynb  testchunkcs.py
embedders/: __init__.py  ankh.py  base.py  checkpoint.py  dataset.py  esm.py  hfautomodel.py  parser.py  prost.py  prottrans.py  schema.py  utils.py
examples/: README.md  allvsall.md  allvsall.sh  bacteria.md  onevsall.sh  scope.md  scope.sh  stepbystep.md  stepbystep_in_python.md  use_in_python.md
notebooks/: asymetric.fasta  ctermialbug.fasta  cterminal.ipynb  example.ipynb  flow.ipynb  simseqbug.fasta
scripts/: allvsall.py  allvsall.sh  conda_nfs_env.sh  csv2nice.py  dbtofile.py  devel_example.sh  devel_plm_blast.py  example.sh  example_all_vs_all.sh  generate_db.sh  makeindex.py  merge.py  onevsone.sh  onvevsone.py  plm_blast.py  plmblast.py  plmblast_org.py  plmblast_test.py  plmblast_test2.py  plot.py  query_emb.py  run_plm_blast.py  run_plmblast.py  search_frame.py  search_frame_multicpu.py  search_frame_singlecpu.py  test.ipynb  time_benchmark.sh  time_benchmark_tmvec.sh  tmpres.csv
tests/: _test_embeddings.py  _test_numeric.py  draw.py  numeric.py  pytest.ini  raw_data.p  script_speed.sh  sim_sercz.csv  speed.py  test.txt  test_database.py  test_density.py  test_draw.py  test_embeddings.py  test_flow.py  test_numeric.py  test_numeric_with_numba.py  test_plmblast_script.py  test_script.py  test_scripts.py  test_utils.py  testres.txt
tests/test_data/: seq.p  (+13 more)
vikram/: fragment_6.csv  fragment_6.emb  fragment_6.p
(+56 files in other folders)
